# kuka_mini_repository

kuka_mini/: CMakeLists.txt  package.xml
kuka_mini/config/: kuka_mini.config.xacro  kuka_mini.yaml
kuka_mini/launch/: kuka_mini_trial.launch.py  kuka_mini_trial2.launch.py
kuka_mini/urdf/: iiwa.urdf.xacro  kuka_mini_combined.urdf.xacro
mini_control/: CMakeLists.txt  package.xml
mini_control/description/urdf/: rrbot.urdf  rrbot.urdf.xacro  rrbot2.urdf  rrbot_.urdf  rrbot_ignore.urdf  rrbot_macro.urdf.xacro  rrbot_macro_2.urdf.xacro
mini_control/include/mini_control/: gravity_compensation.h
mini_control/launch/: gravity_compensation.launch.py  rrbot_gazebo.launch.py
mini_control/scripts/: pinocchio_test.py  test_gravity.py
mini_control/src/: gravity_compensation.cpp  gravity_test  gravity_test.cpp  urdf_test  urdf_test.cpp
mini_srr/: CMakeLists.txt  package.xml
mini_srr/config/: srr_controllers.yaml
mini_srr/description/urdf/: srrbot.urdf.xacro
mini_srr/launch/: srr_gazebo.launch.xml
